Fix bug with margins on smaller screen sizes

--- a/assets/style.css
+++ b/assets/style.css
@@ -194,10 +194,12 @@ footer ul {
   padding: 10px 35px;
   width: 40%;
 }
+.social-links{
+  margin: 0 auto;
+}
 .footer-links:hover,
 .footer-links:focus {
-  color: #d9d9d6;
-  border-bottom: 1px solid #d9d9d6;
+  opacity: .7;
 }
 /*-----------
 Contact Us Styles
